Bug 416269 - Changed name of loan account is not saved
Summary: Changed name of loan account is not saved
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-14 23:01 UTC by Eugen Albiker
Modified: 2020-01-15 19:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugen Albiker 2020-01-14 23:01:38 UTC
SUMMARY
A credit account can be changed by right-click on the account and choose "Konto bearbeiten" (change account).
But if I change the name of the credit account the new name will not be saved - the credit account still has its old name

STEPS TO REPRODUCE
1. add a credit and name it "test"
2. edit the credit: right click on account --> "Konto bearbeiten" (change account) --> "Sonstige Kontoinformationen bearbeiten" ("edit additional account infos"?) --> .... --> type in a new account name "MyCredit1"
3. go thru the wizard till end an save

OBSERVED RESULT
The credit account has still its old name "test"

EXPECTED RESULT
The credit account should be named "MyCredit1"

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Frameworks 5.66.0
Qt 5.12.4 (kompiliert gegen 5.12.4)
Das xcb Fenstersystem

ADDITIONAL INFORMATION
KMyMoney-5.0.7-9f64ba4-x86_64.AppImage
Comment 1 Jack 2020-01-15 00:52:51 UTC
I think there may be a translation issue here.  If I open a credit account, and then open the "Edit Account" dialog, I can change the account name and click OK.  There is no wizard to work through.  Is this really a credit card account or a loan account?   There is a known issue that with a loan account, the "Edit Account" brings up the loan wizard again, and there is no way to edit the other aspects of the account.  I'm not going to mark this a duplicate yet, but I think it really is the same as https://bugs.kde.org/show_bug.cgi?id=386186.
Comment 2 Eugen Albiker 2020-01-15 18:48:12 UTC
Hi Jack,
ok, I changed my language settings to "LANGUAGE=en_US.UTF-8", and tried it again.

you are right - I mean a "loan account" and not a "credit card" account.
The "edit account" of a loan account brings up the "edit loan account wizard".
Here I am selecting "Modify other loan information" --> next --> next --> Change the name to ""MyCredit1""  --> next ...... until "finish".

OBSERVED RESULT
The credit account has still its old name "test"

EXPECTED RESULT
The credit account should be named "MyCredit1", but it is still the old name

My used version
KMyMoney-5.0.7-9f64ba4-x86_64.AppImage


Greetings
Eugen
Comment 3 Thomas Baumgart 2020-01-15 19:05:37 UTC
Git commit 16e542a4ef150866fa5f89d289e597cfe103c02d by Thomas Baumgart.
Committed on 15/01/2020 at 19:05.
Pushed by tbaumgart into branch '5.0'.

Allow to modify name of loan account

The UI elements were present and functional but the value was not
stored.

This change stores the value provided by the user.
FIXED-IN: 5.0.8

M  +1    -0    kmymoney/wizards/newloanwizard/keditloanwizard.cpp

https://commits.kde.org/kmymoney/16e542a4ef150866fa5f89d289e597cfe103c02d
Comment 4 Thomas Baumgart 2020-01-15 19:06:16 UTC
Git commit 57a5c7fe972e25ceafae8daf0ea69ab2f12c3829 by Thomas Baumgart.
Committed on 15/01/2020 at 19:06.
Pushed by tbaumgart into branch 'master'.

Allow to modify name of loan account

The UI elements were present and functional but the value was not
stored.

This change stores the value provided by the user.
FIXED-IN: 5.0.8
(cherry picked from commit 16e542a4ef150866fa5f89d289e597cfe103c02d)

M  +1    -0    kmymoney/wizards/newloanwizard/keditloanwizard.cpp

https://commits.kde.org/kmymoney/57a5c7fe972e25ceafae8daf0ea69ab2f12c3829