Allow to modify name of loan account

The UI elements were present and functional but the value was not
stored.

This change stores the value provided by the user.

BUG: 416269
FIXED-IN: 5.0.8